--- a/css/reset.css
+++ b/css/reset.css
@@ -574,3 +574,6 @@ transform: translate(0px,0px);
 .dialogContainer{position:fixed;width:900px;height:70%;background:#fff;z-index:10;left:50%;margin-left:-450px;top:15%;overflow:auto;}
 .zzdiv{background:url(../images/bg_zz.png) ;position:fixed;left:0px;top:0px;width:100%;height:100%;z-index:9;}
 .container_eidt{padding:10px;}
+.skills{border: 1px solid pink;width: 200px;height: 250px;display: inline-block;margin-left: 10%;margin-top: 10px;float:left;text-align: left;}
+.boxs{width: 100%;height:250px;text-align: center;}
+.skills li{margin-top: 26px;}
